# agentic-ai-support

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.qdrant.yml  docker-compose.yml  pyproject.toml
documentation/: DataTruck_Fresh_Design_v2.md  admin-dashboard.md  deferred-tasks.md  implementation-tasks.md  improvement-tasks.md  initial-implementation-tasks.md  project-requirement.md  project_plan.md  telegram-zendesk-integration-chatgpt-prompt.md
scripts/: bootstrap_from_history.py  check_qdrant.py  ingest_zendesk.py  sync_zendesk.py
src/admin/: file_ingest.py  group_store.py  schemas.py
src/admin/dashboard/: app.py  styles.py  utils.py
src/admin/dashboard/pages/: 1_Groups.py  1_Performance.py  2_Knowledge_Base.py  3_Decision_Review.py  3_Upload.py  4_Conversations.py  4_Tickets.py  5_Groups.py  6_Tickets.py
src/agent/: agent.py  classifier.py  completeness_checker.py  edges.py  extractor.py  generator.py  graph.py  schemas.py  state.py  thread_router.py  ticket_summarizer.py
src/agent/nodes/: generate.py  learn.py  perceive.py  remember.py  respond.py  retrieve.py  think.py
src/agent/prompts/: classifier_prompt.py  extractor_prompt.py  generate_prompt.py  generator_prompt.py  system_prompt.py  think_prompt.py  thread_router_prompt.py
src/api/: app.py
src/config/: settings.py
src/database/: engine.py  models.py  repositories.py
src/embeddings/: gemini_embedder.py
src/escalation/: poller.py  profile_service.py  sync_service.py  ticket_client.py  ticket_schemas.py  ticket_store.py  webhook_handler.py
src/ingestion/: article_processor.py  chunker.py  file_parser.py  image_downloader.py  sync_manager.py  zendesk_client.py
src/learning/: __init__.py  episode_recorder.py  example_selector.py
src/memory/: approved_memory.py  memory_schemas.py
src/rag/: query_builder.py  reranker.py  retriever.py
src/telegram/: bot.py  formatter.py  preprocessor.py
src/telegram/context/: context_manager.py  group_context.py
src/telegram/handlers/: message_handler.py  webhook_handler.py
src/utils/: language.py  logging.py  retry.py
src/vector_db/: collections.py  indexer.py  qdrant_client.py
tests/: conftest.py
tests/integration/: test_e2e.py  test_escalation_flow.py  test_ingestion_pipeline.py  test_rag_retrieval.py
tests/unit/: test_agent.py  test_approved_memory.py  test_article_processor.py  test_chunker.py  test_classifier.py  test_extractor.py  test_file_ingest.py  test_file_parser.py  test_formatter.py  test_generator.py  test_group_context.py  test_group_store.py  test_language.py  test_message_handler.py  test_profile_service.py  test_qdrant_client.py  test_query_builder.py  test_reranker.py  test_thread_router.py  test_ticket_summarizer.py  test_webhook_handler.py  test_zendesk_ticket_client.py
